# aivideoyt

./: .env-example  .gitignore  README.md  pyproject.toml
src/aivideocut/: configs.py  gem_article.py  gem_prompts.py  gem_srt.py  gem_srt_english.py  gem_summary.py  gem_utils.py  gem_yt_chapters.py  gem_yt_seo.py  sil2.py  utils.py
