[project]
name = "aivideocut"
version = "0.0.1"
description = "aivideocut"
readme = "README.md"
license = "MIT"
authors = [{ name = "Luiz Otávio Miranda" }]
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.1",
  "ffmpeg-python>=0.2.0",
  "google-genai>=1.21.1",
  "openai-whisper>=20240930",
  "python-dotenv>=1.1.0",
  "rich>=14.0.0",
  "silero-vad>=5.1.2",
  "smartcut",
  "soundfile>=0.13.1",
]

[project.urls]
Homepage = "https://www.otaviomiranda.com.br/"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
  "ASYNC",
  "A",
  "ANN",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FIX",
  "I",
  "ICN",
  "ISC",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TD",
  "TRY",
  "UP",
  "W",
  "YTT",
  "RUF",
  "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["aivideocut"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src", 'tests']
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
smartcut = { git = "https://github.com/skeskinen/smartcut.git" }
auto-editor = { git = "https://github.com/WyattBlue/auto-editor" }

[tool.setuptools]
package-dir = { "" = "src" }
